<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/blacklist_message"
            android:textAlignment="center"
            android:textColor="@color/colorAccent" />

    <EditText
            android:id="@android:id/edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/preference_multiline_hint"
            android:inputType="textMultiLine"
            android:singleLine="false"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:autofillHints="@string/todo"
            tools:ignore="UnusedAttribute" />
</LinearLayout>