<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <TextView
            android:text="@string/song_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songName" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="32dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:textSize="24sp"
            android:textColor="@color/colorMainText"/>
    <TextView
            android:text="@string/song_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/songAuthor" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/songName" android:textColor="@color/colorMainText"/>
    <SeekBar
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/songProgress" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/songAuthor" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" android:progress="50"/>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="@+id/songProgress"
            app:layout_constraintStart_toStartOf="@+id/songProgress"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/songProgress">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPause"
                android:onClick="onClick"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0.498" app:srcCompat="@drawable/baseline_play_arrow_white_48"
                android:contentDescription="@string/todo"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btnPrev"
                android:onClick="onClick"
                android:clickable="true"
                android:focusable="true"
                app:layout_constraintEnd_toStartOf="@+id/btnPause" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:srcCompat="@drawable/baseline_skip_previous_white_48" android:contentDescription="@string/todo"/>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onClick"
                android:clickable="true"
                android:focusable="true"
                app:srcCompat="@drawable/baseline_skip_next_white_48"
                android:id="@+id/btnNext" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintStart_toEndOf="@+id/btnPause" android:layout_marginStart="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                android:contentDescription="@string/todo"/>
        <TextView
                android:text="@string/songDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/songProgessText" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/songDuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/songDuration" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <ImageView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:id="@+id/songArt" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/songName" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/todo" tools:srcCompat="@tools:sample/avatars[0]"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/baseline_star_rate_white_36"
            android:id="@+id/btnStar" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/songProgress" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="24dp" android:contentDescription="@string/todo"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onClick"
            android:clickable="true"
            android:focusable="true"
            app:srcCompat="@drawable/baseline_shuffle_white_36"
            android:id="@+id/btnShuffle" android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toTopOf="@+id/songProgress" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="24dp" android:contentDescription="@string/todo"/>
</androidx.constraintlayout.widget.ConstraintLayout>